2026.6.18 客户端bug修改